--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -1,12 +1,12 @@
 name: IBM Cloud Auto Restart
 
 on:
-  push:
-    branches: [ master ]
+  #push:
+    #branches: [ master ]
   pull_request:
     branches: [ master ] 
-  schedule:
-    - cron: '0 12 * * MON,THU'
+  #schedule:
+   # - cron: '0 12 * * MON,THU'
 
 jobs:
   ibm-cloud-restart:
